--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Accomplish Joyfull Adventures
-email: "mageswaran1989@gmail.com"
-description: "Embedded Engineering and Deep Learning"
+title: dhīra 
+amail: "mageswaran1989@gmail.com"
+description: "an energetic learner"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://iaja.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://dhira.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  mageswaran1989
-google_analytics: ""
+google_analytics: "UA-109512309-1"
 
 
 # Build settings
