--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: dhīra 
-amail: "mageswaran1989@gmail.com"
+title: dhīraa
+email: "mageswaran1989@gmail.com"
 description: "an energetic learner"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://dhira.github.io" # the base hostname & protocol for your site, e.g. http://example.com
